# aiosmtplib

./: .coveragerc  .deepsource.toml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.markdown  README.rst  aiosmtp.py  aiosmtplib.py  azure-pipelines.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements-uvloop.txt  requirements.txt  setup.cfg  setup.py  tests.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
aiosmtplib/: __init__.py  __main__.py  api.py  auth.py  base.py  commands.py  compat.py  connection.py  default.py  email.py  errors.py  esmtp.py  protocol.py  response.py  smtp.py  starttls.py  status.py  streams.py  sync.py  tests.py  textutils.py  tls.py  typing.py  utils.py
docs/: Makefile  api.rst  bug-reporting.rst  changelog.rst  client.rst  conf.py  encryption.rst  index.rst  oauth.rst  overview.rst  proxies.rst  quickstart.rst  reference.rst  requirements.rst  requirements.txt  timeouts.rst  trio.rst  usage.rst
scripts/: test_gmail_oauth.py
src/aiosmtplib/: __init__.py  __main__.py  api.py  api.pyi  auth.py  compat.py  connection.py  connection.pyi  default.py  email.py  errors.py  esmtp.py  protocol.py  proxy.py  response.py  smtp.py  status.py  sync.py  typing.py
tests/: auth.py  compat.py  conftest.py  env.py  mocks.py  pyright.py  server.py  smtpd.py  sslproto.py  test_api.py  test_async.py  test_asyncio.py  test_auth.py  test_auth_methods.py  test_auth_utils.py  test_client.py  test_commands.py  test_compat.py  test_config.py  test_connect.py  test_email_utils.py  test_errors.py  test_esmtp_utils.py  test_live.py  test_main.py  test_memory_usage.py  test_protocol.py  test_proxy.py  test_response.py  test_sendmail.py  test_server.py  test_smtp.py  test_status.py  test_sync.py  test_timeouts.py  test_tls.py  type_usage.py
tests/certs/: invalid.crt  invalid.key  selfsigned.crt  selfsigned.key
tests/testserver/: __init__.py  preset_server.py  smptd_server.py  sslproto.py
