[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aiosmtplib"
version = "3.0.0"
description = "asyncio SMTP client"
authors = ["Cole Maclean <hi@colemaclean.dev>"]
license = "MIT"
packages = [{ include = "aiosmtplib" }]
readme = "README.rst"
repository = "https://github.com/cole/aiosmtplib"
documentation = "https://aiosmtplib.readthedocs.io/en/stable/"
keywords = ["smtp", "email", "asyncio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: No Input/Output (Daemon)",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
exclude = ["docs/requirements.txt"]
include = [
    { path = "CHANGELOG.rst", format = "sdist" },
    { path = "tests", format = "sdist" },
    { path = "docs", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"

uvloop = { version = "^0.18", optional = true }
sphinx = { version = "^7.0.0", optional = true }
furo = { version = "^2023.9.10", optional = true }
sphinx-copybutton = { version = "^0.5.0", optional = true }
sphinx_autodoc_typehints = { version = "^1.24.0", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx_autodoc_typehints", "sphinx-copybutton", "furo"]
uvloop = ["uvloop"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2"
pytest-asyncio = "^0.20.1"
pytest-cov = "^4.0"
pytest-xdist = "^3.0.0"
coverage = { extras = ["toml"], version = "^6.5" }
hypothesis = "^6.56"
aiosmtpd = "^1.4.2"
trustme = "^0.9.0"

[tool.poetry.group.typecheck]
optional = true

[tool.poetry.group.typecheck.dependencies]
mypy = "^0.982"

[tool.poetry.group.security]
optional = true

[tool.poetry.group.security.dependencies]
bandit = "^1.7.4"
safety = "^2.3.1"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.0.244"

[tool.pytest.ini_options]
asyncio_mode = "strict"
minversion = "6.0"
junit_family = "xunit2"
addopts = "--strict-markers"
testpaths = ["tests"]

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
line-length = 88
target-version = "py38"

[tool.coverage]

[tool.coverage.run]
source = ["aiosmtplib"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pass",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
