[metadata]
name = aiosmtplib
version = attr: src.aiosmtplib.__version__
description = asyncio SMTP client
long_description = file: README.rst, CHANGELOG.rst, LICENSE.txt
keywords = smtp, email, asyncio
author = Cole Maclean
author_email = hi@cole.io
url = https://github.com/cole/aiosmtplib
project_urls =
    Documentation = https://aiosmtplib.readthedocs.io/en/latest/
    Source = https://github.com/cole/aiosmtplib
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: No Input/Output (Daemon)
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Communications :: Email

[options]
python_requires = >=3.5.2

[options.extras_require]
docs = sphinx; sphinx_autodoc_typehints
testing = hypothesis; pytest; pytest-asyncio; pytest-cov; aiosmtpd

[tool:pytest]
testpaths = tests
addopts =
    --strict
    -vv

[isort]
default_section = THIRDPARTY
known_first_party = aiosmtplib
include_trailing_comma = true
multi_line_output = 5
lines_after_imports = 2

[coverage:run]
source = aiosmtplib
branch = true

[coverage:report]
show_missing = true
ignore_errors = true
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
omit =
    tests/

[coverage:paths]
source =
   src/aiosmtplib
   .tox/*/lib/python*/site-packages/aiosmtplib
   .tox/pypy*/site-packages/aiosmtplib
