[metadata]
description-file = README.rst
license_file = LICENSE.txt

[tool:pytest]
testpaths = tests
addopts =
    --tb=short
    --strict
    -vv

[isort]
default_section = THIRDPARTY
known_first_party = aiosmtplib, testserver
include_trailing_comma = true
multi_line_output = 5
lines_after_imports = 2

[coverage:run]
source = aiosmtplib
branch = true

[coverage:report]
show_missing = true
ignore_errors = true
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
omit =
    tests/

[coverage:paths]
source =
   src/aiosmtplib
   .tox/*/lib/python*/site-packages/aiosmtplib
   .tox/pypy*/site-packages/aiosmtplib
