[metadata]
description-file = README.rst
license_file = LICENSE.txt

[tool:pytest]
testpaths = tests
addopts =
    --strict

[isort]
default_section = THIRDPARTY
known_first_party = aiosmtplib, testserver
include_trailing_comma = true
multi_line_output = 3
lines_after_imports = 2
line_length = 88

[flake8]
max-line-length = 88
ignore = E203, W503

[coverage:run]
source = aiosmtplib
branch = true
parallel = true

[coverage:report]
show_missing = true
skip_covered = true
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:

[coverage:paths]
source =
    src
    */site-packages
